--- a/app/src/main/res/layout/single_item_for_recycler_crypto.xml
+++ b/app/src/main/res/layout/single_item_for_recycler_crypto.xml
@@ -5,6 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:id="@+id/tvTime"
+        tools:text="14:05"
+        app:layout_constraintEnd_toEndOf="@id/linLayout"
+        app:layout_constraintBottom_toBottomOf="@id/linLayout"
+        android:layout_marginEnd="16dp"/>
+
     <LinearLayout
         android:id="@+id/linLayout"
         android:layout_width="match_parent"
